--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
   },
   "require": {
     "php": "^7.2",
+    "ext-swoole": "*",
     "hamlet-framework/http": "dev-master"
   },
   "require-dev": {
